tests/diagnostics/catalog/snapshots/ir/IR0004.snap
error[IR0004]: IR_E_ARITY_MISMATCH
 --> tests/diagnostics/catalog/sources/ir/IR0004.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0004
  = help: keep IR validation diagnostics structured and catalog-backed
